<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/app_name">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150sp"
                android:gravity="center"
                android:text="Rick &amp; \n            Morty"
                android:textSize="35sp"
                android:textStyle="italic"
                app:layout_collapseMode="parallax" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_cardview"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/email_id"
                android:textColor="@color/black"
                android:textSize="15dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edt"
                android:focusable="true"
                app:boxBackgroundMode="none"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_your_email_id"
                    android:inputType="textEmailAddress"
                    android:overScrollMode="always"
                    android:padding="15dp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:textSize="13dp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="15dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edt"
                app:boxBackgroundMode="none"
                app:endIconDrawable="@drawable/password_toggle"
                app:endIconMode="password_toggle"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:overScrollMode="always"
                    android:padding="15dp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:textSize="13dp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>


            <!--  <TextView
                  android:id="@+id/forgot_password"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20dp"
                  android:gravity="end"
                  android:text="@string/forgot_password"
                  android:textColor="@color/black"
                  android:textSize="15dp" />-->

            <TextView
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_btn_login"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/login_btn"
                android:textColor="@color/white" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
