<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="70sp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        app:cardCornerRadius="30dp"
                        app:cardElevation="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="50dp"
                            android:orientation="vertical"
                            android:paddingLeft="15dp"
                            android:paddingRight="15sp">


                            <TextView
                                android:id="@+id/character_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="76sp"
                                android:gravity="center"
                                android:hint="Agency Director"
                                android:textColor="@color/black"
                                android:textColorHint="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="30sp"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">


                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:text="@string/species"
                                        android:textColor="@color/black"
                                        android:textSize="16sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/character_species"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="7sp"
                                        android:backgroundTint="@color/Gray"
                                        android:gravity="center"
                                        android:hint="Human"
                                        android:textStyle="bold"
                                        android:textSize="14sp" />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:text="@string/gender"
                                        android:textColor="@color/black"
                                        android:textSize="16sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/character_gender"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="7sp"
                                        android:backgroundTint="@color/Gray"
                                        android:gravity="center"
                                        android:hint="Male"
                                        android:textStyle="bold"
                                        android:textSize="14sp" />

                                </LinearLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5sp"
                                android:layout_marginTop="10sp"
                                android:orientation="vertical">


                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="20dp"
                                    android:text="@string/type"
                                    android:textColor="@color/black"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/character_type"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="7dp"
                                    android:hint="Superhuman (Ghost trains summoner)"
                                    android:maxLines="1"
                                    android:textStyle="bold"
                                    android:textColorHint="@color/Gray"
                                    android:textSize="14sp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="20dp"
                                    android:text="@string/origin"
                                    android:textColor="@color/black"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/character_origin"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="7dp"
                                    android:backgroundTint="@color/Gray"
                                    android:textStyle="bold"
                                    android:hint="Earth (Replacement Dimension)"
                                    android:maxLines="1"
                                    android:textSize="14sp" />


                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="20dp"
                                    android:text="@string/location"
                                    android:textColor="@color/black"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/character_address"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="7dp"
                                    android:backgroundTint="@color/Gray"
                                    android:textStyle="bold"
                                    android:hint="Earth (Replacement Dimension)"
                                    android:maxLines="1"
                                    android:textSize="14sp" />

                            </LinearLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </RelativeLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/img"
                app:civ_border_color="#FF000000"
                app:civ_border_overlay="true"
                app:civ_border_width="4sp"
                app:layout_anchor="@+id/relativeLayout"
                app:layout_anchorGravity="top|center"
                app:layout_insetEdge="top" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </ScrollView>


</LinearLayout>